prevent splash text div from intersection FAB on small phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,7 +254,7 @@ input[type="range"].enhanced-slider:focus::-ms-fill-upper {
   justify-content: space-around;
   align-items: center;
   margin-top: 1em;
-  margin-bottom: 2em;
+  margin-bottom: 3em;
   flex: 1;
 }
 
